# freshrig

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.local.json
.claude/commands/: feature.md  fix.md  release.md
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
site/: download.html  index.html  privacy.html  terms.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  portable.rs  util.rs
src-tauri/src/commands/: apps.rs  cleanup.rs  context_menu.rs  custom_apps.rs  debloat.rs  drivers.rs  hardware.rs  installed_apps.rs  license.rs  mod.rs  network.rs  presets.rs  privacy.rs  profiles.rs  report.rs  services.rs  startup.rs  winget_search.rs
src-tauri/src/commands/linux/: app_catalog.rs  apps.rs  cleanup.rs  drivers.rs  hardware.rs  mod.rs  network.rs  privacy.rs  report.rs  services.rs  startup.rs  util.rs
src-tauri/src/commands/macos/: app_catalog.rs  apps.rs  cleanup.rs  drivers.rs  hardware.rs  mod.rs  network.rs  privacy.rs  report.rs  services.rs  startup.rs  util.rs
src-tauri/src/data/: app_catalog.rs  debloat_tweaks.rs  mod.rs  preset_profiles.rs
src-tauri/src/models/: apps.rs  cleanup.rs  context_menu.rs  custom_apps.rs  debloat.rs  drivers.rs  hardware.rs  mod.rs  network.rs  privacy.rs  profiles.rs  services.rs  startup.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
(+76 files in other folders)
